Criação de um FrontEnd para a importação do arquivo CNAB - Parcial Criação do projeto API com a Controller para a importação do CNAB Criação da camada de aplicação que cuida da importação do CNAB para o Controller. Criação de StringExtensions e um Cross Cutting na camada de Infra para configurar as injeções de dependência a serem utilizadas pelas controllers.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,11 @@
 /desafiodev.cnabreader/desafiodev.cnabreader.domain/obj
 /.vs
 /desafiodev.cnabreader/.vs
+/desafiodev.cnabreader/desafiodev.cnabreader.api/bin/Debug/net6.0
+/desafiodev.cnabreader/desafiodev.cnabreader.api/obj
+/desafiodev.cnabreader/desafiodev.cnabreader.application/bin/Debug/net6.0
+/desafiodev.cnabreader/desafiodev.cnabreader.application/obj
+/desafiodev.cnabreader/desafiodev.infra.crosscutting.DI/bin/Debug/net6.0
+/desafiodev.cnabreader/desafiodev.infra.crosscutting.DI/obj
+/desafiodev.cnabreader/desafiodev.infra.crosscutting.Extensions/bin/Debug/net6.0
+/desafiodev.cnabreader/desafiodev.infra.crosscutting.Extensions/obj
